# khulnasoft

./: .cspell.json  .cursorignore  .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.yml  .mailmap  .npmrc-cloud  .nxignore  .prettierignore  .prettierrc  .synopkgrc  .trivyignore  .vale.ini  BUILD.bazel  CHANGELOG.md  CITATION.cff  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  Dockerfile.golang  Dockerfile.node  Dockerfile.ruby  LICENSE.enterprise  Makefile  NOTICE  README.md  SECURITY.md  WORKSPACE  banner.txt  codecov.yml  create_notice.py  deps.bzl  (+31 more)
.buildkite/: pipeline.yml
.changeset/: config.json  weak-toes-invent.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md  test.CODEOWNERS
.reuse/: dep5
apps/: .cspell.json  Dockerfile  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
auditorium/: .babelrc  README.md  gulpfile.js  index.js  package-lock.json  package.json  register-dev-locales.js
client/: README.md
cmd/: README.md
cmd/frontend/graphqlbackend/apitest/: BUILD.bazel  types.go
cmd/frontend/internal/processrestart/: BUILD.bazel  doc.go  goreman_server.go  processrestart.go
cmd/khulnasoft/: BUILD.bazel  README.md  main.go
cmd/worker/job/: BUILD.bazel  job.go
dev/: CLA.txt  Caddyfile  Caddyfile-sveltekit  add_https_domain_to_hosts.sh  check-tokens.sh  codeinsights-db.sh  dev-khulnasoft-server.sh  go_mockgen_rule.bzl  licenses.sh  mocha.bzl  oci_deps.bzl  redis-postgres.yml  run-server-image.sh  site-config.json  src-search-meta.sh  tool_deps.bzl
dev/build-tracker/config/: BUILD.bazel  config.go
dev/depgraph/internal/graph/: BUILD.bazel  graph.go  imports.go  names.go  packages.go
dev/linters/bodyclose/: BUILD.bazel  bodyclose.go
dev/linters/nolint/: BUILD.bazel  nolint.go
dev/managedservicesplatform/googlesecretsmanager/: BUILD.bazel  googlesecretsmanager.go
dev/scaletesting/codehostcopy/bitbucket/: BUILD.bazel  client.go
dev/sg/buf/: BUILD.bazel  buf.go
dev/sg/cloudsqlproxy/: BUILD.bazel  binary.go  cloudsqlproxy.go
developer-docs/: README.md
doc/: BUILD.bazel  KNOWN-ISSUES.md  _generated.push.sh  dependency_decisions.yml  docsite.json  index.md  sidebar.md
docker/: .env.example  Dockerfile.base  README.md  docker-compose.s3.yml  docker-compose.yml
docker-images/: README.md
docs/: .gitignore  404.html  README.md  _config.yml  _override.yml  documentation.md  index.md  make.py  writing.md
i18n/: README.ar.md  README.bg.md  README.bn.md  README.ca.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.et.md  README.fa.md  README.fi.md  README.fr.md  README.gr.md  README.gu.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.jp.md  README.ko.md  README.lt.md  README.lv.md  README.ms.md  README.nb-no.md  README.nb.md  README.ne.md  (+21 more)
internal/authbearer/: BUILD.bazel  authbearer.go
internal/conf/confdefaults/: BUILD.bazel  confdefaults.go
internal/conf/deploy/: BUILD.bazel  deploytype.go  endpoints.go
internal/deviceid/: BUILD.bazel  middleware.go
internal/grpc/propagator/: BUILD.bazel
internal/honey/search/: BUILD.bazel  search.go
internal/logging/: BUILD.bazel  main.go
internal/modelconfig/embedded/: BUILD.bazel  embed.go
internal/oobmigration/migrations/: BUILD.bazel  migrations.go
internal/oobmigration/migrations/batches/: BUILD.bazel  empty_spec_id_migrator.go  empty_spec_id_migrator_test.go  external_fork_name_migrator.go  external_fork_name_migrator_test.go  extsvc_webhook_migrator.go  extsvc_webhook_migrator_test.go  role_assignment_migrator.go  role_assignment_migrator_test.go  ssh_migrator.go  ssh_migrator_test.go
internal/oobmigration/migrations/codeintel/lsif/: BUILD.bazel  diagnostics_count.go  diagnostics_count_test.go  document_column_split.go  document_column_split_test.go  locations_count.go  locations_count_test.go  migrator.go  migrator_test.go  scip_migrator.go  scip_migrator_test.go  serializer.go  types.go
internal/oobmigration/migrations/codeintel/lsif/testdata/: lsif.sql
internal/oobmigration/migrations/iam/: BUILD.bazel  license_key_field_migrator.go  license_key_field_migrator_test.go  subscription_account_number_migrator.go  subscription_account_number_migrator_test.go  unified_permissions_migrator.go  unified_permissions_migrator_test.go
internal/oobmigration/migrations/insights/: BUILD.bazel  dashboards.go  insights.go  insights_language_stat.go  migrator.go  migrator_test.go  setting_parse.go  settings.go  types_db.go
internal/oobmigration/migrations/insights/backfillv2/: BUILD.bazel  migrator.go  migrator_test.go
internal/oobmigration/migrations/insights/recording_times/: BUILD.bazel  migrator.go  migrator_test.go
internal/oobmigration/migrations/insights/testdata/: TestInsightsMigrator.golden  global_settings.json  org_settings.json  user_settings.json
internal/oobmigration/migrations/register/: BUILD.bazel  register.go
internal/own/types/: BUILD.bazel  types.go
internal/releaseregistry/mocks/: BUILD.bazel  mocks.go
internal/repoupdater/protocol/: BUILD.bazel  repoupdater.go
internal/requestinteraction/: BUILD.bazel  grpc.go  http.go
internal/service/: BUILD.bazel  service.go
internal/service/svcmain/: BUILD.bazel  svcmain.go
internal/types/typestest/: BUILD.bazel  typestest.go
internal/users/: BUILD.bazel  stats.go
lib/managedservicesplatform/: BUILD.bazel  go.mod  go.sum  managedservicesplatform.go
lib/managedservicesplatform/bigquerywriter/: bigquerywriter.go
lib/managedservicesplatform/cloudsql/: BUILD.bazel
lib/managedservicesplatform/runtime/: config.go  job.go
lib/managedservicesplatform/runtime/contract/: contract.go  contract_test.go  diagnostics_test.go
lib/managedservicesplatform/runtime/internal/opentelemetry/: metrics.go  tracing.go
monitoring/grafanaclient/headertransport/: BUILD.bazel
(+16048 files in other folders)
