load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sourcegraph_lib",
    srcs = ["main.go"],
    importpath = "github.com/khulnasoft/khulnasoft/cmd/khulnasoft",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/frontend/shared",
        "//cmd/gitserver/shared",
        "//cmd/repo-updater/shared",
        "//cmd/searcher/shared",
        "//cmd/worker/shared",
        "//internal/sanitycheck",
        "//internal/service",
    ],
)

go_binary(
    name = "khulnasoft",
    embed = [":sourcegraph_lib"],
    visibility = ["//visibility:public"],
)
