load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "authbearer",
    srcs = ["authbearer.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/authbearer",
    tags = [TAG_PLATFORM_SOURCE],
    visibility = ["//:__subpackages__"],
    deps = ["//lib/errors"],
)
