load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deviceid",
    srcs = ["middleware.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/deviceid",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/conf",
        "//internal/cookie",
        "@com_github_google_uuid//:uuid",
    ],
)
