load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = ["main.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/logging",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/env",
        "@com_github_fatih_color//:color",
        "@com_github_inconshreveable_log15//:log15",
    ],
)
