load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/debugserver",
        "//internal/env",
        "//internal/observation",
    ],
)
