load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "users",
    srcs = ["stats.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/users",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/database",
        "//lib/errors",
        "@com_github_keegancsmith_sqlf//:sqlf",
    ],
)
