load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "job",
    srcs = ["job.go"],
    importpath = "github.com/khulnasoft/khulnasoft/cmd/worker/job",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/env",
        "//internal/goroutine",
        "//internal/observation",
    ],
)
