load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/khulnasoft/khulnasoft/dev/build-tracker/config",
    tags = [TAG_INFRA_DEVINFRA],
    visibility = ["//visibility:public"],
    deps = ["//lib/managedservicesplatform/runtime"],
)
