load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bodyclose",
    srcs = ["bodyclose.go"],
    importpath = "github.com/khulnasoft/khulnasoft/dev/linters/bodyclose",
    tags = [TAG_INFRA_DEVINFRA],
    visibility = ["//visibility:public"],
    deps = [
        "//dev/linters/nolint",
        "@com_github_timakin_bodyclose//passes/bodyclose:go_default_library",
    ],
)
