load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nolint",
    srcs = ["nolint.go"],
    importpath = "github.com/khulnasoft/khulnasoft/dev/linters/nolint",
    tags = [TAG_INFRA_DEVINFRA],
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//analysis/report",
        "@org_golang_x_tools//go/analysis",
    ],
)
