load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "googlesecretsmanager",
    srcs = ["googlesecretsmanager.go"],
    importpath = "github.com/khulnasoft/khulnasoft/dev/managedservicesplatform/googlesecretsmanager",
    tags = [TAG_INFRA_CORESERVICES],
    visibility = ["//visibility:public"],
)
