load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloudsqlproxy",
    srcs = [
        "binary.go",
        "cloudsqlproxy.go",
    ],
    importpath = "github.com/khulnasoft/khulnasoft/dev/sg/cloudsqlproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//dev/sg/internal/background",
        "//dev/sg/internal/std",
        "//lib/errors",
        "//lib/output",
        "@com_github_sourcegraph_run//:run",
    ],
)
