load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "confdefaults",
    srcs = ["confdefaults.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/conf/confdefaults",
    tags = [TAG_PLATFORM_SOURCE],
    visibility = ["//:__subpackages__"],
    deps = ["//internal/conf/conftypes"],
)
