load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deploy",
    srcs = [
        "deploytype.go",
        "endpoints.go",
    ],
    importpath = "github.com/khulnasoft/khulnasoft/internal/conf/deploy",
    tags = [TAG_PLATFORM_SOURCE],
    visibility = ["//:__subpackages__"],
    deps = ["//internal/env"],
)
