load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "propagator",
    srcs = ["propagator.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/grpc/propagator",
    tags = [TAG_PLATFORM_SOURCE],
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
