load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "embedded",
    srcs = ["embed.go"],
    embedsrcs = ["models.json"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/modelconfig/embedded",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/modelconfig/types",
        "//lib/errors",
    ],
)
