load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["migrations.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/oobmigration/migrations",
    tags = [TAG_INFRA_RELEASE],
    visibility = ["//:__subpackages__"],
    deps = ["//internal/database/basestore"],
)
