load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = ["types.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/own/types",
    tags = [TAG_SEARCHSUITE],
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/own/codeowners/v1:codeowners",
    ],
)
