load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protocol",
    srcs = ["repoupdater.go"],
    importpath = "github.com/khulnasoft/khulnasoft/internal/repoupdater/protocol",
    tags = [TAG_PLATFORM_SOURCE],
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/extsvc",
        "//internal/extsvc/awscodecommit",
        "//internal/extsvc/bitbucketcloud",
        "//internal/extsvc/bitbucketserver",
        "//internal/extsvc/github",
        "//internal/extsvc/gitlab",
        "//internal/repoupdater/v1:repoupdater",
        "//internal/types",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
