load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "headertransport",
    srcs = ["headertransport.go"],
    importpath = "github.com/khulnasoft/khulnasoft/monitoring/grafanaclient/headertransport",
    tags = [TAG_INFRA_DEVINFRA],
    visibility = ["//visibility:public"],
)
