load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "processrestart",
    srcs = [
        "doc.go",
        "goreman_server.go",
        "processrestart.go",
    ],
    importpath = "github.com/khulnasoft/khulnasoft/cmd/frontend/internal/processrestart",
    tags = [TAG_SEARCHSUITE],
    visibility = ["//cmd/frontend:__subpackages__"],
    deps = ["//lib/errors"],
)
