load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "graph.go",
        "imports.go",
        "names.go",
        "packages.go",
        "util.go",
    ],
    importpath = "github.com/khulnasoft/khulnasoft/dev/depgraph/internal/graph",
    visibility = ["//dev/depgraph:__subpackages__"],
    deps = [
        "//internal/byteutils",
        "@com_github_grafana_regexp//:regexp",
    ],
)
