load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bitbucket",
    srcs = [
        "client.go",
        "models.go",
    ],
    importpath = "github.com/khulnasoft/khulnasoft/dev/scaletesting/codehostcopy/bitbucket",
    tags = [TAG_INFRA_DEVINFRA],
    visibility = ["//visibility:public"],
    deps = ["//lib/errors"],
)
